--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,6 +1,7 @@
 // Colors
 $light-gray: #f3f9fb;
 $green: #87c0cd;
+$dark-green: #418898;
 $light-blue: #226597;
 $dark-blue: #113f67;
 $white: #f9f9f9;
